# workedon

./: .coveragerc  .cruft.json  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  codecov.yml  codespell.txt  demo.tape  pyproject.toml  requirements-dev.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: automerge.yml  codeql.yml  coverage.yml  create-draft-release.yml  main.yml  pre-commit-autoupdate.yml  publish.yml  release.yml  test.yml  validate-codecov-config.yml  vhs.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
requirements/: build.txt  dev.txt  lint.txt  test.txt
scripts/: check_changelog_date.py  fix_changelog_date.py  tag_release.sh
tests/: __init__.py  conftest.py  test_cli.py  test_cli_branches.py  test_conf.py  test_constants.py  test_default_settings.py  test_exceptions.py  test_integration.py  test_models.py  test_models_edge_cases.py  test_parser.py  test_parser_edge_cases.py  test_utils.py  test_utils_edge_cases.py  test_version_main.py  test_workedon.py
workedon/: __init__.py  __main__.py  _version.py  cli.py  conf.py  constants.py  db.py  default_settings.py  exceptions.py  models.py  parser.py  utils.py  workedon.py
