[build-system]
requires = [
    "setuptools >= 45",
    "wheel",
    "versioningit",
]
build-backend = "setuptools.build_meta"

[tool.versioningit]
vcs = { method = "git", default-tag = "0.0.0" }
write = { file = "workedon/_version.py" }

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{build_date:%Y%m%d%H%M%S}"
dirty = "{base_version}.dev{build_date:%Y%m%d%H%M%S}+dirty"
distance-dirty = "{next_version}.dev{build_date:%Y%m%d%H%M%S}+dirty"